--- a/量子力学の非局所性.ipynb
+++ b/量子力学の非局所性.ipynb
@@ -99,7 +99,7 @@
     }
    ],
    "source": [
-    "確率(θ)= 1 + cos(θ/180*pi)/2\n",
+    "確率(θ)= (1 + cos(θ/180*pi))/2\n",
     "測定(p) = (rand() < p) ? 1 : 0\n",
     "\n",
     "function 局所(spin,θ₁,θ₂) \n",
@@ -382,10 +382,10 @@
     "            num=(測定角1 * 2 + 測定角2 +1)\n",
     "            print(num)\n",
     "            (測定値1 == 測定値2) ? N[num,1]+= 1 : N[num,2]+=1\n",
-    "            (測定値1 == 測定値2) ? ok=\"OK\" : ok=\"NG\"\n",
-    "            println(測定値1 , 測定値2)\n",
+    "            #(測定値1 == 測定値2) ? ok=\"OK\" : ok=\"NG\"\n",
+    "            #println(測定値1 , 測定値2)\n",
     "        end\n",
-    "        E = (N[:,1]+N[:,2])/(N[:,1]+N[:,2])  #N.map(n => (n[0]-n[1]) / (n[0]+n[1]))\n",
+    "        E = @. (N[:,1]-N[:,2])/(N[:,1]+N[:,2])  #N.map(n => (n[0]-n[1]) / (n[0]+n[1]))\n",
     "        S = E[1] - E[2] + E[3] + E[4]\n",
     "        log=println\n",
     "        log(f)\n",
