--- a/量子力学の非局所性.ipynb
+++ b/量子力学の非局所性.ipynb
@@ -105,7 +105,7 @@
     "function 局所(spin,θ₁,θ₂) \n",
     "    r=rand()\n",
     "    測定値1 = ( r < 確率( θ₁ -spin )) ? 1 : 0\n",
-    "    測定値2 = ( r < 確率( θ₁ -spin )) ? 0 : 1\n",
+    "    測定値2 = ( r < 確率( θ₂ -spin )) ? 0 : 1\n",
     "    測定値1 , 測定値2\n",
     "end\n",
     "\n",
@@ -380,7 +380,7 @@
     "            θ₂ = [22.5, 67.5][測定角2+1]\n",
     "            測定値1, 測定値2 = f(spin, θ₁, θ₂)\n",
     "            num=(測定角1 * 2 + 測定角2 +1)\n",
-    "            print(num)\n",
+    "            #print(num)\n",
     "            (測定値1 == 測定値2) ? N[num,1]+= 1 : N[num,2]+=1\n",
     "            #(測定値1 == 測定値2) ? ok=\"OK\" : ok=\"NG\"\n",
     "            #println(測定値1 , 測定値2)\n",
