--- a/量子力学の非局所性.ipynb
+++ b/量子力学の非局所性.ipynb
@@ -2,24 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-20T08:34:56.339000+09:00",
-     "start_time": "2020-02-19T23:34:56.333Z"
+     "end_time": "2020-02-20T19:24:54.129000+09:00",
+     "start_time": "2020-02-20T10:24:50.515Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "syntax: incomplete: invalid \"`\" syntax",
-     "output_type": "error",
-     "traceback": [
-      "syntax: incomplete: invalid \"`\" syntax",
-      ""
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#=JSコード\n",
     "\n",
@@ -74,81 +64,52 @@
     "  return 0;\n",
     "}\n",
     "\n",
-    "'''"
+    "=#"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 154,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-20T08:31:48.839000+09:00",
-     "start_time": "2020-02-19T23:31:48.831Z"
+     "end_time": "2020-02-20T20:29:47.871000+09:00",
+     "start_time": "2020-02-20T11:29:47.865Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "非局所 (generic function with 1 method)"
+       "局所 (generic function with 1 method)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "確率(θ)= (1 + cos(θ/180*pi))/2\n",
-    "測定(p) = (rand() < p) ? 1 : 0\n",
+    "測定(p) = (rand() < p) \n",
     "\n",
-    "function 局所(spin,θ₁,θ₂) \n",
-    "    r=rand()\n",
-    "    測定値1 = ( r < 確率( θ₁ -spin )) ? 1 : 0\n",
-    "    測定値2 = ( r < 確率( θ₂ -spin )) ? 0 : 1\n",
-    "    測定値1 , 測定値2\n",
+    "function 非局所(θ₁,θ₂,spin)\n",
+    "    ( rand() > 確率( θ₁ -θ₂ )) \n",
     "end\n",
     "\n",
-    "function 非局所(spin, θ₁,θ₂)\n",
-    "    測定値1 = 測定(確率(θ₁ - spin))\n",
-    "    測定値2 = ( rand() < 確率( θ₁ -θ₂)) ? (1 - 測定値1) : 測定値1\n",
-    "    測定値1 , 測定値2\n",
-    "end"
+    "function 局所(θ₁,θ₂,spin) \n",
+    "    r=rand()\n",
+    "    ( r < 確率( θ₁ -spin )) == !( r < 確率( θ₂ -spin )) \n",
+    "end\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 158,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-20T08:31:27.320000+09:00",
-     "start_time": "2020-02-19T23:31:27.318Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#3非局所(0,0,1)\n",
-    "測定(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-20T08:32:10.508000+09:00",
-     "start_time": "2020-02-19T23:32:10.383Z"
+     "end_time": "2020-02-20T20:29:54.191000+09:00",
+     "start_time": "2020-02-20T11:29:53.632Z"
     },
     "scrolled": false
    },
@@ -157,241 +118,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "210\n",
-      "310\n",
-      "210\n",
-      "410\n",
-      "210\n",
-      "110\n",
-      "101\n",
-      "110\n",
-      "310\n",
-      "210\n",
-      "410\n",
-      "410\n",
-      "110\n",
-      "310\n",
-      "110\n",
-      "410\n",
-      "401\n",
-      "410\n",
-      "410\n",
-      "310\n",
-      "201\n",
-      "410\n",
-      "101\n",
-      "410\n",
-      "301\n",
-      "410\n",
-      "110\n",
-      "110\n",
-      "401\n",
-      "310\n",
-      "210\n",
-      "410\n",
-      "310\n",
-      "301\n",
-      "210\n",
-      "110\n",
-      "410\n",
-      "210\n",
-      "401\n",
-      "310\n",
-      "310\n",
-      "410\n",
-      "110\n",
-      "410\n",
-      "410\n",
-      "410\n",
-      "101\n",
-      "110\n",
-      "210\n",
-      "310\n",
-      "110\n",
-      "101\n",
-      "210\n",
-      "210\n",
-      "210\n",
-      "210\n",
-      "210\n",
-      "410\n",
-      "301\n",
-      "310\n",
-      "110\n",
-      "110\n",
-      "310\n",
-      "110\n",
-      "410\n",
-      "101\n",
-      "210\n",
-      "110\n",
-      "210\n",
-      "210\n",
-      "410\n",
-      "110\n",
-      "110\n",
-      "310\n",
-      "310\n",
-      "210\n",
-      "410\n",
-      "110\n",
-      "101\n",
-      "210\n",
-      "410\n",
-      "110\n",
-      "310\n",
-      "401\n",
-      "310\n",
-      "210\n",
-      "410\n",
-      "210\n",
-      "410\n",
-      "101\n",
-      "410\n",
-      "110\n",
-      "310\n",
-      "210\n",
-      "310\n",
-      "210\n",
-      "210\n",
-      "310\n",
-      "110\n",
-      "410\n",
       "非局所\n",
-      "N =[0.0 27.0; 0.0 24.0; 0.0 21.0; 0.0 28.0]\n",
-      "E =[0.2881422924901186 0.25612648221343876 0.2241106719367589 0.29881422924901185; 0.25612648221343876 0.22766798418972334 0.19920948616600792 0.2656126482213439; 0.2241106719367589 0.19920948616600792 0.17430830039525694 0.2324110671936759; 0.2988142292490119 0.2656126482213439 0.2324110671936759 0.3098814229249012]\n",
-      "S =0.5549407114624506\n",
-      "110\n",
-      "110\n",
-      "310\n",
-      "310\n",
-      "110\n",
-      "110\n",
-      "210\n",
-      "410\n",
-      "410\n",
-      "110\n",
-      "210\n",
-      "110\n",
-      "110\n",
-      "310\n",
-      "310\n",
-      "110\n",
-      "410\n",
-      "210\n",
-      "101\n",
-      "410\n",
-      "410\n",
-      "110\n",
-      "110\n",
-      "101\n",
-      "110\n",
-      "410\n",
-      "110\n",
-      "310\n",
-      "110\n",
-      "110\n",
-      "310\n",
-      "210\n",
-      "401\n",
-      "210\n",
-      "401\n",
-      "201\n",
-      "201\n",
-      "301\n",
-      "210\n",
-      "210\n",
-      "410\n",
-      "310\n",
-      "410\n",
-      "210\n",
-      "410\n",
-      "310\n",
-      "210\n",
-      "310\n",
-      "210\n",
-      "210\n",
-      "210\n",
-      "310\n",
-      "101\n",
-      "310\n",
-      "310\n",
-      "210\n",
-      "110\n",
-      "310\n",
-      "210\n",
-      "210\n",
-      "110\n",
-      "310\n",
-      "301\n",
-      "110\n",
-      "210\n",
-      "110\n",
-      "110\n",
-      "110\n",
-      "210\n",
-      "201\n",
-      "210\n",
-      "301\n",
-      "210\n",
-      "210\n",
-      "410\n",
-      "410\n",
-      "210\n",
-      "310\n",
-      "410\n",
-      "210\n",
-      "210\n",
-      "110\n",
-      "410\n",
-      "110\n",
-      "210\n",
-      "410\n",
-      "410\n",
-      "410\n",
-      "201\n",
-      "310\n",
-      "210\n",
-      "410\n",
-      "310\n",
-      "410\n",
-      "310\n",
-      "110\n",
-      "210\n",
-      "110\n",
-      "210\n",
-      "310\n",
+      "N =[9593 241091; 76976 172283; 9667 240122; 9621 240647]\n",
+      "E =[-0.9234653986692409, -0.3823613189493659, -0.9225986732802486, -0.9231144213403232]\n",
+      "S =-2.3868171743404467\n",
       "局所\n",
-      "N =[0.0 27.0; 0.0 31.0; 0.0 22.0; 0.0 20.0]\n",
-      "E =[0.28321678321678323 0.3251748251748252 0.23076923076923078 0.2097902097902098; 0.3251748251748252 0.37334887334887334 0.26495726495726496 0.24087024087024086; 0.23076923076923078 0.26495726495726496 0.18803418803418806 0.17094017094017094; 0.2097902097902098 0.2408702408702409 0.17094017094017094 0.1554001554001554]\n",
-      "S =0.3986013986013986\n"
+      "N =[40505 210023; 74833 174919; 26409 223411; 8727 241173]\n",
+      "E =[-0.6766429301315622, -0.4007415356033185, -0.7885757745576816, -0.93015606242497]\n",
+      "S =-1.9946332315108952\n"
      ]
     }
    ],
    "source": [
     "function test()\n",
+    "    spin = rand() * 360\n",
     "    for f in [非局所, 局所]\n",
     "        N = [0 0;0 0;0 0;0 0]\n",
-    "        for i in 1:100\n",
-    "            spin = rand() * 360\n",
-    "            測定角1 = rand(0:1)\n",
-    "            測定角2 = rand(0:1)\n",
-    "            θ₁ = [ 0  , 45  ][測定角1+1]\n",
-    "            θ₂ = [22.5, 67.5][測定角2+1]\n",
-    "            測定値1, 測定値2 = f(spin, θ₁, θ₂)\n",
-    "            num=(測定角1 * 2 + 測定角2 +1)\n",
-    "            #print(num)\n",
-    "            (測定値1 == 測定値2) ? N[num,1]+= 1 : N[num,2]+=1\n",
-    "            #(測定値1 == 測定値2) ? ok=\"OK\" : ok=\"NG\"\n",
-    "            #println(測定値1 , 測定値2)\n",
+    "        for i in 1:1000000\n",
+    "            測定角1 = rand(1:2)\n",
+    "            測定角2 = rand(1:2)\n",
+    "            θ₁ = [ 0  , 45  ][測定角1]\n",
+    "            θ₂ = [22.5, 67.5][測定角2]\n",
+    "            num=(測定角1 * 2 + 測定角2 -2 )\n",
+    "            f( θ₁, θ₂,spin) ? N[num,1]+= 1 : N[num,2]+=1\n",
     "        end\n",
-    "        E = @. (N[:,1]-N[:,2])/(N[:,1]+N[:,2])  #N.map(n => (n[0]-n[1]) / (n[0]+n[1]))\n",
+    "        \n",
+    "        E = @. (N[:,1]-N[:,2])/(N[:,1]+N[:,2]) \n",
     "        S = E[1] - E[2] + E[3] + E[4]\n",
-    "        log=println\n",
-    "        log(f)\n",
-    "        log(\"N =\", N)\n",
-    "        log(\"E =\", E)\n",
-    "        log(\"S =\", S)     \n",
+    "        println(f)\n",
+    "        println(\"N =\", N)\n",
+    "        println(\"E =\", E)\n",
+    "        println(\"S =\", S)        \n",
     "    end\n",
     "end\n",
     "test()"
